--- a/css/mainMenu.css
+++ b/css/mainMenu.css
@@ -43,12 +43,13 @@ Peformance:
     float: left;
     width: 18%;
     margin-right: 15%;
-    padding: 1%;
+    padding: 1%;    
 }
 
 aside a {
     display: block;
     padding: 1%;
+	font-size: 2.6em;
 }
 
 aside a:hover {
