--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,9 +1,3 @@
-body {
-    /*background-color: white;*/
-    /* Responsividade: Melhor organização dos artefatos e fontes da tela. -*/
-	font-size: 62.5%
-}
-
 @media screen and (min-width: 200px) {
     body {
         background-color: yellow;
@@ -12,13 +6,13 @@ body {
 
 @media screen and (min-width: 640px) {
     body {
-        background-color: aqua;
+        background-color: gray;
     }
 }
 
 @media screen and (min-width: 800px) {
     body {
-        background-color: red;
+        background-color: white;
     }
 }
 
